Add favicon and astro-icon

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.11.6",
+    "@astrojs/mdx": "^0.12.0",
     "astro": "^1.6.10",
+    "astro-icon": "^0.8.0",
     "sharp": "^0.31.2"
   }
 }
