Update dependencies, fix Icon

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.5",
-    "astro": "^5.1.5",
-    "astro-icon": "^0.8.2",
+    "@astrojs/mdx": "^4.3.13",
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/vscode-icons": "^1.2.40",
+    "astro": "^5.16.11",
+    "astro-icon": "^1.1.5",
     "highlight.js": "^11.9.0",
-    "sharp": "^0.33.0"
+    "sharp": "^0.34.5"
   }
 }
